restapi + succ. connection f -> b

--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
   "version": "1.0.0",
   "description": "shopping website using MERN",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server/server",
-    "test": "nodemon server/server"
+    "server": "nodemon server/server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\" "
   },
   "author": "abbeyme",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.9"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0"
   }
 }
