--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "abbeyme",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
